Add signup page

--- a/ionic-app/vates/src/pages/welcome/welcome.html
+++ b/ionic-app/vates/src/pages/welcome/welcome.html
@@ -16,7 +16,7 @@
 <ion-content padding>
   <div>
     <h1>Welcome to</h1>
-    <h1>Voice-based</h1>
+    <h1>Voice-based automated</h1>
     <h1>Transport Enquiry System</h1>
   </div>
 
