--- a/ionic-app/vates/src/pages/login/login.html
+++ b/ionic-app/vates/src/pages/login/login.html
@@ -27,9 +27,9 @@
         <ion-input type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
     </ion-list>
-    <div id='loginButtons'>
+    <div id="loginButtons">
       <button ion-button type="button" name="button" (click)="authenticate()">Login</button>
-      <button ion-button type="button" name="button">Sign Up</button>
+      <button ion-button type="button" name="button" (click)="newSignup()">Sign Up</button>
     </div>
 
   </div>
