--- a/ionic-app/vates/src/pages/welcome/welcome.html
+++ b/ionic-app/vates/src/pages/welcome/welcome.html
@@ -20,4 +20,13 @@
     <h1>Transport Enquiry System</h1>
   </div>
 
+  <div>
+    <button type="button" name="button" (click)="listenNow()">
+      <ion-icon name="mic" id="mic"></ion-icon>
+    </button>
+
+    <button ion-button type="button" name="button" (click)="logout()">Logout</button>
+
+  </div>
+
 </ion-content>
