Add fetching report data and profile.

--- a/ionic-app/vates/src/pages/welcome/welcome.html
+++ b/ionic-app/vates/src/pages/welcome/welcome.html
@@ -24,8 +24,10 @@
     <button type="button" name="button" (click)="listenNow()">
       <ion-icon name="mic" id="mic"></ion-icon>
     </button>
-
     <button ion-button type="button" name="button" (click)="logout()">Logout</button>
+    <button ion-button type="button" name="button" (click)="changePassword()">Change Password</button>
+    <button ion-button type="button" name="button" (click)="showProfile()">Show Profile</button>
+    <button ion-button type="button" name="button" (click)="deleteProfile()">Delete Profile</button>
 
   </div>
 
