--- a/ionic-app/vates/src/pages/profile/profile.html
+++ b/ionic-app/vates/src/pages/profile/profile.html
@@ -13,7 +13,11 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="overall">
+  <ion-card>
+    <ion-card-header>
+        Your Profile
+      </ion-card-header>
   <ion-list>
     <ion-item>
       <ion-label stacked>Username</ion-label>
@@ -41,7 +45,9 @@
     </ion-item>
 
   </ion-list>
-
+  <div id="loginButtons">
   <button ion-button round type="button" name="button" color="dark" (click)="editDetails()">Submit</button>
+</div>
+</ion-card>
 
 </ion-content>
