UI enhancements before report

--- a/ionic-app/vates/src/pages/dummy/dummy.html
+++ b/ionic-app/vates/src/pages/dummy/dummy.html
@@ -37,10 +37,12 @@
       <ion-item *ngFor="let bus of buses">{{bus}}</ion-item>
     </ion-list>
   </div> -->
+  
 </ion-content>
-
+<div class="footbar">
 <ion-footer no-border>
   <ion-toolbar>
     <button ion-button type="button" default name="button" (click)="getEstimate()" color="dark" round>Fare Estimate</button>
   </ion-toolbar>
 </ion-footer>
+</div>
